--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -71,7 +71,6 @@ log4j.logger.com.mchange=ERROR
 ### MyBatis
 log4j.logger.org.apache.ibatis=WARN
 
-log4j.logger.cn.chengchaos=DEBUG
 log4j.logger.org.mybatis.spring=WARN
 log4j.logger.com.gpdata.trade.mapper=WARN
 log4j.logger.org.springframework.jdbc.datasource=WARN
@@ -79,4 +78,7 @@ log4j.logger.org.springframework.jdbc.datasource=WARN
 ### GPData ...
 log4j.logger.com.gpdata=DEBUG
 log4j.logger.com.gpdata.trade=DEBUG
+
+### chengchaos.cn
+log4j.logger.cn.chengchaos=DEBUG
 
